k8s/eks/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fase4
  labels:
    name: fase4
