k8s/eks/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api
  namespace: fase4
  labels:
    app: users-api
spec:
  type: ClusterIP
  selector:
    app: users-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
